--- a/RestServerCloudEndpoints/.settings/com.google.appengine.eclipse.core.prefs
+++ b/RestServerCloudEndpoints/.settings/com.google.appengine.eclipse.core.prefs
@@ -6,3 +6,4 @@ gaeHrdEnabled=true
 gaeIsEclipseDefaultInstPath=true
 googleCloudSqlEnabled=false
 localDevMySqlEnabled=true
+validationExclusions=test/org/gonevertical/server/TestUtils.java
